--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -535,6 +535,13 @@ config UID_CPUTIME
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 
+config ROCKCHIP_SCR
+	tristate "Rockchip Smartcard Reader Controller support"
+	default n
+	help
+	  say Y here to enable Rockchip Smartcard Reader Controller driver
+	  for Soc such as RK3128,RK322x,RK3288,RK3368,RK3366 and etc.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
