ARM: configs: rockchip_defconfig: add SOC smart card reader controller.
Change-Id: I505e9c4d23ab23d50e5d31a68b576771ac9dd3c7
Signed-off-by: Aiyoujun <ayj@rock-chips.com>

--- a/arch/arm64/configs/rockchip_defconfig
+++ b/arch/arm64/configs/rockchip_defconfig
@@ -203,6 +203,7 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_UID_STAT=y
 CONFIG_SRAM=y
+CONFIG_ROCKCHIP_SCR=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
