video: rockchip: hdmi: v2: modify phy reg to pass CTS signal quality test
Change-Id: Ife9f9808dcc29320f628bf91005e16f22bbe3c50
Signed-off-by: xuhuicong <xhc@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
@@ -672,6 +672,10 @@
 &hdmi {
 	status = "okay";
 	rockchip,hdmi_video_source = <DISPLAY_SOURCE_LCDC1>;
+	rockchip,phy_table =
+		<148500000 0 0 17 18 18 18>,
+		<297000000 1 1 17 14 14 14>,
+		<594000000 1 1 16 5 5 5>;
 };
 
 &vop_lite {
