--- a/arch/arm64/boot/dts/rockchip/rk3399-monkey.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-monkey.dts
@@ -48,7 +48,7 @@
 	compatible = "rockchip,android", "rockchip,rk3399";
 
 	chosen {
-		bootargs = "console=uart,mmio32,0xff690000 clk_ignore_unused";
+		bootargs = "console=uart,mmio32,0xff1a0000 clk_ignore_unused";
 	};
 
 	reserved-memory {
