ARM64: dts: rk3399-tb: enable emmc_phy and sdhci
Change-Id: I0693b5e3f194b3fb0aed73784d0242ebf89d4ebe
Signed-off-by: Shawn Lin <shawn.lin@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
@@ -179,11 +179,15 @@
 	status = "disabled";
 };
 
+&emmc_phy {
+	status = "okay";
+};
+
 &sdhci {
 	bus-width = <8>;
 	supports-emmc;
 	non-removable;
-	status = "disabled";
+	status = "okay";
 };
 
 &i2s0 {
