ARM64: dts: rk3366-tb: add regulator-ramp-delay of vdd_arm
Change-Id: If4eb8f964592d2f6c0e418659b12f672dc9abb94
Signed-off-by: Jianhong Chen <chenjh@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
@@ -412,6 +412,7 @@
 		regulator-always-on;
 		regulator-boot-on;
 		regulator-initial-state = <3>;
+		regulator-ramp-delay = <2000>;
 		regulator-state-mem {
 			regulator-off-in-suspend;
 			regulator-suspend-microvolt = <900000>;
