ARM64: rockchip_defconfig: open rk322x vop
Change-Id: I9df6706a34fecadd5f149cd566b31323dafb51c2
Signed-off-by: Huang Jiachai <hjc@rock-chips.com>

--- a/arch/arm64/configs/rockchip_defconfig
+++ b/arch/arm64/configs/rockchip_defconfig
@@ -348,6 +348,7 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FB_ROCKCHIP=y
 CONFIG_LCDC_RK3368=y
+CONFIG_LCDC_RK322X=y
 CONFIG_LCDC_LITE_RK3X=y
 CONFIG_LCD_MIPI=y
 CONFIG_RK_TRSM=y
