arm64: dts: add i2c0, i2c1 rise and fall time for rk3366-tb
Change-Id: I74d70eb8a058ae97844695dbf6bc4d01827c7bef
Signed-off-by: David Wu <david.wu@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
@@ -399,6 +399,8 @@
 
 &i2c0 {
 	status = "okay";
+	i2c-scl-rising-time-ns = <250>;
+	i2c-scl-falling-time-ns = <20>;
 
 	syr827: syr827@40 {
 		regulator-name = "vdd_arm";
@@ -611,6 +613,8 @@
 
 &i2c1 {
 	status = "okay";
+	i2c-scl-rising-time-ns = <460>;
+	i2c-scl-falling-time-ns = <15>;
 
 	rt5640: rt5640@1c {
 		#sound-dai-cells = <0>;
