arm64: dts: add i2c0, i2c1, i2c4 rise and fall time for rk3399-tb
Change-Id: Ibbd7d7ee7bfce25fe104b03ea742c0bab2b4b586
Signed-off-by: David Wu <david.wu@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
@@ -243,6 +243,8 @@
 
 &i2c0 {
 	status = "okay";
+	i2c-scl-rising-time-ns = <450>;
+	i2c-scl-falling-time-ns = <15>;
 
 	mp8865: mp8865@68 {
 		compatible = "mps,mp8865";
@@ -446,6 +448,8 @@
 
 &i2c4 {
 	status = "okay";
+	i2c-scl-rising-time-ns = <600>;
+	i2c-scl-falling-time-ns = <20>;
 
 	gt9xx: gt9xx@14 {
 		compatible = "goodix,gt9xx";
@@ -462,6 +466,8 @@
 
 &i2c1 {
 	status = "okay";
+	i2c-scl-rising-time-ns = <300>;
+	i2c-scl-falling-time-ns = <15>;
 
 	es8316: es8316@10 {
 		#sound-dai-cells = <0>;
