ARM64: dts: rk3399-tb: fix up the pwm regulator node
add pwm init voltage and id for uboot.
fix up the pwms node and add pwm polarity.

Change-Id: I4159c97ae498411ab958c2b1e1223139ac670452
Signed-off-by: Elaine Zhang <zhangqing@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-monkey.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-monkey.dts
@@ -130,6 +130,16 @@
 	};
 };
 
+&vdd_log {
+	rockchip,pwm_id= <2>;
+	rockchip,pwm_voltage = <900000>;
+};
+
+&vdd_center {
+	rockchip,pwm_id= <3>;
+	rockchip,pwm_voltage = <900000>;
+};
+
 &fb {
 	status = "okay";
 };
