ARM64: rockchip_defconfig: enable mp8865 regulator
Change-Id: I612fbe41e97f4e06dc154f76a256c7996d7ea09a
Signed-off-by: Zain Wang <wzz@rock-chips.com>

--- a/arch/arm64/configs/rockchip_defconfig
+++ b/arch/arm64/configs/rockchip_defconfig
@@ -322,6 +322,7 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_ACT8865=y
 CONFIG_REGULATOR_FAN53555=y
+CONFIG_REGULATOR_MP8865=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_RK818=y
 CONFIG_MEDIA_SUPPORT=y
