iommu/rockchip: enable upstream iommu on ARM64 platform
Change-Id: I8470750d63b890322d48bc47c07c516f2e3ba270
Signed-off-by: Simon <xxm@rock-chips.com>

--- a/arch/arm64/configs/rockchip_defconfig
+++ b/arch/arm64/configs/rockchip_defconfig
@@ -515,6 +515,7 @@ CONFIG_ION_ROCKCHIP=y
 CONFIG_COMMON_CLK_RK808=y
 # CONFIG_COMMON_CLK_XGENE is not set
 CONFIG_MAILBOX=y
+CONFIG_ROCKCHIP_IOMMU=y
 CONFIG_RK_IOMMU=y
 CONFIG_RK_IOVMM=y
 CONFIG_ROCKCHIP_PM_DOMAINS=y
