ARM64: dts: rk3399: chrome: enable mipi node
Change-Id: Icc169b97ec985b5e7332ed1ed5ed78d20c717062
Signed-off-by: Mark Yao <mark.yao@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
@@ -57,6 +57,16 @@
 	};
 };
 
+&mipi_dsi {
+	status = "okay";
+	panel {
+		compatible ="boe,tv080wum-nl0";
+		reg = <0>;
+		backlight = <&backlight>;
+		status = "okay";
+	};
+};
+
 &vopb {
 	status = "okay";
 };
