--- a/arch/arm64/configs/rockchip_cros_defconfig
+++ b/arch/arm64/configs/rockchip_cros_defconfig
@@ -51,7 +51,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
-CONFIG_CMDLINE="console=uart,mmio32,0xff1a0000 rootwait cros_debug cros_secure ro root=/dev/mmcblk0p3 init=/sbin/init"
+CONFIG_CMDLINE="console=uart,mmio32,0xff1a0000 rootwait cros_debug cros_secure ro root=/dev/mmcblk0p3 init=/sbin/init kgdboc=ttyS2"
 CONFIG_CMDLINE_FORCE=y
 # CONFIG_EFI is not set
 # CONFIG_COREDUMP is not set
@@ -563,7 +563,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
-CONFIG_MAGIC_SYSRQ=y
+CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=1
 CONFIG_LOCKUP_DETECTOR=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=10
 CONFIG_PANIC_TIMEOUT=5
@@ -571,6 +571,8 @@ CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_ENABLE_DEFAULT_TRACERS=y
+CONFIG_KGDB=y
+CONFIG_KGDB_KDB=y
 CONFIG_DEBUG_RODATA=y
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
