--- a/arch/arm64/configs/rockchip_cros_defconfig
+++ b/arch/arm64/configs/rockchip_cros_defconfig
@@ -329,6 +329,7 @@ CONFIG_REGULATOR_DEBUG=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_ACT8865=y
 CONFIG_REGULATOR_FAN53555=y
+CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_MP8865=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_RK818=y
