ARM64: dts: rk3399: remove clk_ignore_unused
Change-Id: I48874e2b82487d5e9ae6e83c954ea2bd06960c8f
Signed-off-by: Xing Zheng <zhengxing@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-monkey.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-monkey.dts
@@ -49,7 +49,7 @@
 	compatible = "rockchip,android", "rockchip,rk3399";
 
 	chosen {
-		bootargs = "console=uart,mmio32,0xff1a0000 clk_ignore_unused";
+		bootargs = "console=uart,mmio32,0xff1a0000";
 	};
 
 	reserved-memory {
