--- a/arch/arm64/configs/rockchip_cros_defconfig
+++ b/arch/arm64/configs/rockchip_cros_defconfig
@@ -517,6 +517,7 @@ CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
 CONFIG_ION_ROCKCHIP=y
+CONFIG_CHROME_PLATFORMS=y
 CONFIG_COMMON_CLK_RK808=y
 # CONFIG_COMMON_CLK_XGENE is not set
 CONFIG_MAILBOX=y
